# eternabot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: eternabot.yml
migrations/: 20210113105317_server.sql  20210113141259_server_discord_id_unique.sql
src/: hooks.rs  main.rs  typemap_keys.rs
src/exts/: utils.rs
src/handlers/: handler.rs  mod.rs  ready.rs
src/models/: server.rs
src/utils/: guild.rs
