[package]
name = "eternabot"
version = "0.1.0"
authors = ["ks129 <45097959+ks129@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serenity = "0.10"
sentry = "0.21"
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
