[package]
name = "eternabot"
version = "0.1.0"
authors = ["ks129 <45097959+ks129@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serenity = "0.10"
sentry = { version = "0.21", features = ["backtrace", "contexts", "panic", "transport", "log"] }
log = { version = "0.4", features = ["std"] }
pretty_env_logger = "0.4"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.2.16"
sqlx = { git = "https://github.com/ant32/sqlx.git", branch = "tokio-1.0", features = ["runtime-tokio-native-tls", "chrono", "postgres", "json", "tls"] }
serde_json = "1.0"
